--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,16 @@
       text-align: center;
       margin-bottom: 1rem;
     }
+    .top-nav {
+      display: flex;
+      justify-content: flex-end;
+      margin-bottom: 0.5rem;
+      font-size: 0.9rem;
+    }
+    .top-nav a {
+      text-decoration: none;
+      color: #2563eb;
+    }
     .card {
       background: #ffffff;
       border-radius: 8px;
@@ -82,6 +92,9 @@
   </style>
 </head>
 <body>
+  <div class="top-nav">
+    <a href="/app/organizer.html">Organizer dashboard</a>
+  </div>
   <h1>🎅 Santa Group Creator</h1>
 
   <div class="card">
