--- a/public/organizer.html
+++ b/public/organizer.html
@@ -7,121 +7,122 @@
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      max-width: 1000px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-      background: #f5f5f5;
-    }
-    .top-nav {
+      margin: 0;
+      min-height: 100vh;
       display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 1rem;
+      background: #f1f5f9;
     }
-    .top-nav a {
-      text-decoration: none;
-      color: #2563eb;
-      font-size: 0.9rem;
+    .sidebar {
+      width: 260px;
+      background: #0f172a;
+      color: white;
+      padding: 1.25rem;
+      box-sizing: border-box;
     }
-    h1 {
-      text-align: left;
-      margin: 0.5rem 0 1rem;
+    .sidebar h1 {
+      font-size: 1.2rem;
+      margin: 0 0 0.75rem;
     }
-    .layout {
-      display: grid;
-      grid-template-columns: minmax(0, 1.1fr) minmax(0, 1.4fr);
-      gap: 1.25rem;
+    .sidebar p {
+      font-size: 0.85rem;
+      color: #94a3b8;
+      margin: 0 0 1rem;
     }
-    .card {
-      background: #ffffff;
-      border-radius: 8px;
-      padding: 1rem 1.25rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-      margin-bottom: 1rem;
-    }
-    .list {
-      max-height: 70vh;
+    .group-list {
+      max-height: calc(100vh - 140px);
       overflow-y: auto;
     }
     .group-item {
-      padding: 0.5rem 0.3rem;
-      border-bottom: 1px solid #e5e7eb;
+      padding: 0.5rem 0.6rem;
+      border-radius: 0.4rem;
       cursor: pointer;
-    }
-    .group-item:last-child {
-      border-bottom: none;
-    }
-    .group-item strong {
-      display: block;
+      margin-bottom: 0.25rem;
+      font-size: 0.85rem;
     }
     .group-item small {
-      color: #6b7280;
+      display: block;
+      color: #cbd5f5;
+    }
+    .group-item code {
       font-size: 0.8rem;
     }
+    .group-item:hover {
+      background: rgba(148, 163, 184, 0.2);
+    }
     .group-item.active {
-      background: #eff6ff;
-      border-radius: 6px;
-      padding-left: 0.5rem;
+      background: #1e293b;
+    }
+    .main {
+      flex: 1;
+      padding: 1.5rem 2rem;
+      box-sizing: border-box;
+    }
+    h2 {
+      margin-top: 0;
     }
     .muted {
       color: #6b7280;
       font-size: 0.9rem;
     }
+    .card {
+      background: white;
+      border-radius: 0.75rem;
+      padding: 1.25rem 1.5rem;
+      box-shadow: 0 10px 25px rgba(15, 23, 42, 0.1);
+    }
+    .links a {
+      font-size: 0.85rem;
+      margin-right: 0.75rem;
+    }
     table {
       width: 100%;
       border-collapse: collapse;
-      margin-top: 0.75rem;
+      margin-top: 1rem;
       font-size: 0.9rem;
     }
     th, td {
-      padding: 0.35rem 0.25rem;
       border-bottom: 1px solid #e5e7eb;
+      padding: 0.4rem 0.3rem;
       text-align: left;
     }
     th {
-      font-weight: 600;
       background: #f9fafb;
-    }
-    code {
+      font-weight: 600;
       font-size: 0.8rem;
-      background: #f3f4f6;
-      padding: 0.15rem 0.3rem;
-      border-radius: 4px;
+      text-transform: uppercase;
+      letter-spacing: 0.03em;
     }
-    .links a {
-      color: #2563eb;
-      text-decoration: none;
-      font-size: 0.9rem;
+    button {
+      border: none;
+      border-radius: 999px;
+      padding: 0.4rem 0.9rem;
+      font-size: 0.85rem;
+      cursor: pointer;
+      background: #b91c1c;
+      color: white;
+      margin-top: 0.4rem;
     }
-    .links a + a {
-      margin-left: 0.5rem;
+    button:disabled {
+      opacity: 0.6;
+      cursor: default;
     }
   </style>
 </head>
 <body>
-  <div class="top-nav">
-    <a href="/app">&larr; Back to group creator</a>
-    <span class="muted">Organizer dashboard</span>
-  </div>
-  <h1>🎅 Organizer Dashboard</h1>
+  <aside class="sidebar">
+    <h1>Organizer Dashboard</h1>
+    <p>Click a group to see assignments, links, and send emails.</p>
+    <div id="groups-empty" class="muted">No groups yet. Create one at <code>/app</code>.</div>
+    <div id="groups-list" class="group-list"></div>
+  </aside>
 
-  <div class="layout">
-    <div class="card list">
-      <h3>Your Groups</h3>
-      <p class="muted" id="groups-empty" style="display:none;">
-        No groups yet. Create one first on the main page.
-      </p>
-      <div id="groups-list"></div>
+  <main class="main">
+    <h2>Group Details</h2>
+    <div id="group-details" class="card muted">
+      Select a group from the left to view details.
     </div>
+  </main>
 
-    <div class="card">
-      <h3>Group Details</h3>
-      <div id="group-details" class="muted">
-        Select a group on the left to see participants and assignments.
-      </div>
-    </div>
-  </div>
-
-  <script src="./organizer.js"></script>
+  <script src="organizer.js" defer></script>
 </body>
 </html>
